--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
   </head>
   <body>
     <section class="wrapper">
-    <h1 class="title">Расчет Крупа Бренд</h1>
+    <h1 class="title">Расчеты</h1>
+    <h2 class="subtitle">Что считаем?</h2>
+    <form  class="form_type">
+        <label for="brand"><input type="radio" id="1" name="type" value="brand" checked> ТМ Бренд</label><br>
+        <label for="noname"> <input type="radio" id="2" name="type" value="noname"> No name</label><br>
+        <!-- <label for="varpak"> <input type="radio" id="3" name="type" value="varpak">Вар Пак</label> -->
+        <label for="mishkino"><input type="radio" id="4" name="type" value="orehi"> Орехи</label>
+        <label for="mishkino"><input type="radio" id="4" name="type" value="eco_crupi">Экокрупы</label>
+        <button type="submit">Применить</button>
+    </form>
+    <h2 class="nowType">Выбирете вид расчета!</h2>
     <div class="contant">
       <div class="form__firstblock">
         <form class="form1">
