--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- <label for="varpak"> <input type="radio" id="3" name="type" value="varpak">Вар Пак</label> -->
         <label for="mishkino"><input type="radio" id="4" name="type" value="orehi"> Орехи</label>
         <label for="mishkino"><input type="radio" id="4" name="type" value="eco_crupi">Экокрупы</label>
-        <button type="submit">Применить</button>
+        <button class="button_type" type="submit">Применить</button>
     </form>
     <h2 class="nowType">Выбирете вид расчета!</h2>
     <div class="contant">
