--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="./images/step.png" type="image/png">
     <link rel="stylesheet" href="./style/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:ital,wght@0,400;0,600;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/index.css" />
-    <title>Document</title>
+    <title>Степь Расчеты</title>
   </head>
   <body>
     <section class="wrapper">
+    <div class="logo"></div>
     <h1 class="title">Расчеты</h1>
     <h2 class="subtitle">Что считаем?</h2>
     <form  class="form_type">
