add type products

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         <form class="form1">
         
             <div class="form__group field">
-                <input type="input" name="marga" class="form__field" placeholder="маржа" autocomplete="off" required="">
+                <input type="text" name="marga" class="form__field" placeholder="маржа" autocomplete="off" required="">
                 <label for="name" class="form__label">маржа</label>
             </div>
             <div class="form__group field">
-                <input type="input" name="fasovka" class="form__field" placeholder="фасовка" autocomplete="off" required="">
+                <input type="text" name="fasovka" class="form__field" placeholder="фасовка" autocomplete="off" required="">
                 <label for="name" class="form__label">фасовка</label>
             </div>
             <div class="form__group field">
-                <input type="input" name="otsrochka" class="form__field" placeholder="отсрочка" autocomplete="off" required="">
+                <input type="text" name="otsrochka" class="form__field" placeholder="отсрочка" autocomplete="off" required="">
                 <label for="name" class="form__label">отсрочка</label>
             </div>
             <div class="form__group field">
-                <input type="input" name="logistika" class="form__field" placeholder="логистика" autocomplete="off" required="">
+                <input type="text" name="logistika" class="form__field" placeholder="логистика" autocomplete="off" required="">
                 <label for="name" class="form__label">логистика</label>
             </div>
             
@@ -147,9 +147,98 @@
             class="input2"
             placeholder="Пшеничная крупа ТМ СТЕПЬ"
           />
-          <button class="btn" name="" type="submit">
-            отправить
+          <h2>Орехи</h2>
+          <input
+          type="text"
+          name="Арахис"
+          class="input2"
+          placeholder="Арахис"
+        />
+        <input
+          type="text"
+          name="Кедр"
+          class="input2"
+          placeholder="Кедр"
+        />
+        <input
+        type="text"
+        name="Миндаль"
+        class="input2"
+        placeholder="Миндаль"
+      />
+      <input
+        type="text"
+        name="Кешью"
+        class="input2"
+        placeholder="Кешью"
+      />
+      <input
+        type="text"
+        name="Фундук"
+        class="input2"
+        placeholder="Фундук"
+      />
+      <input
+        type="text"
+        name="Фисташки"
+        class="input2"
+        placeholder="Фисташки"
+      />
+      <h2>Эко-крупы</h2>
+      <input
+        type="text"
+        name="Чечевица Зеленая"
+        class="input2"
+        placeholder="Чечевица Зеленая"
+      />
+      <input
+        type="text"
+        name="Чечевица Красная"
+        class="input2"
+        placeholder="Чечевица Красная"
+      />
+      <input
+        type="text"
+        name="Кускус"
+        class="input2"
+        placeholder="Кускус"
+      />
+      <input
+        type="text"
+        name="Булгур"
+        class="input2"
+        placeholder="Булгур"
+      />
+      <input
+        type="text"
+        name="Нут"
+        class="input2"
+        placeholder="Нут"
+      />
+      <input
+        type="text"
+        name="Киноа"
+        class="input2"
+        placeholder="Киноа"
+      />
+      <input
+        type="text"
+        name="Зеленая Гречка"
+        class="input2"
+        placeholder="Зеленая Гречка"
+      />
+      <input
+        type="text"
+        name="Полба"
+        class="input2"
+        placeholder="Полба"
+      />
+      <div class="button-fix">
+      <h3>последнее действие:</h3>
+          <button class="btn " name="" type="submit">
+           показать цены
           </button>
+        </div>
         </form>
       </div>
       <div class="popup">
